# PACE

./: .gitignore  .pre-commit-config.yaml  README.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: .pre-commit.yaml
all-sky/python/: README.md  all_sky_jax.py  all_sky_numba.py  constants.py  pyproject.toml
all-sky/python/all_sky_python/: all_sky_jax.py  all_sky_numba.py
bencher/: README.md  upload.py
dedisp/: README.md  filterbank.cpp
dedisp/cpp/: CMakeLists.txt  README.md
dedisp/cpp/cmake/: FetchXTensor.cmake
dedisp/cpp/include/: fdd.hpp  fddplan.hpp  filterbank.hpp  kernels.hpp  metadata.hpp  utilities.hpp
dedisp/cpp/src/: CMakeLists.txt  fdd.cpp  fddplan.cpp  kernels.cpp  main.cpp  utilities.cpp
dedisp/cpp/test/: testfdd.cpp
idg/cpp/: CMakeLists.txt
idg/cpp/cmake/: FetchCxxopts.cmake  FetchXTensor.cmake
idg/cpp/include/: IDG.h  idgtypes-io.h  idgtypes.h  init.h  kernels.h  npy-parser.h
idg/cpp/src/: CMakeLists.txt  IDG.cpp  init.cpp  kernels.cpp  main.cpp  npy-parser.cpp
idg/input/: .env.example  .gitignore  pyproject.toml
idg/input/artifacts/: frequencies.npy  metadata.npy
idg/input/src/: config.py  constants.py  main.py  serializer.py
idg/input/src/initializer/: __init__.py  frequencies.py  metadata.py  uvw.py  visibilities.py
idg/input/src/initializers/: __init__.py  frequencies.py
idg/python/: .env  .gitignore  README.md  idg.py  idgtypes.py  init.py  kernels.py  main.py  pyproject.toml  requirements.txt
idg/python/idg_python/: idg.py  idgtypes.py  init.py  main.py
idg/python/idg_python/kernels/: numba.py
idg/python/tests/: bench_kernels.py  test_noop.py
idg/rust/: Cargo.toml
idg/rust-viv/: Cargo.toml
idg/rust-viv/src/: cli.rs  constants.rs  gridder.rs  init.rs  main.rs  types.rs  util.rs
idg/rust/src/: cli.rs  constants.rs  gridder.rs  idgtypes.rs  init.rs  input.rs  main.rs  util.rs
idg/rust/src/types/: frequency.rs  grid.rs  metadata.rs  mod.rs  subgrid.rs  taper.rs  uvw.rs  visibility.rs  wavenumber.rs
imaging/python/: imaging_jax.py  imaging_numba.py  pyproject.toml
predict/cpp/: CMakeLists.txt  run_bench.sh
predict/cpp/benchmark/: CMakeLists.txt  directions.cpp  main.cpp  phases.cpp  predict.cpp  smearterms.cpp  spectrum.cpp  spectrum_cross.cpp
predict/cpp/ci/: summarize-results.py
predict/cpp/ci/Docker/: Dockerfile
predict/cpp/ci/das6/: compile_and_run.sh
predict/cpp/cmake/: FetchXTensor.cmake  SetTargetCPU.cmake
predict/cpp/include/predict/: Baseline.h  BeamResponse.h  Direction.h  Directions.h  GaussianSource.h  GaussianSourceCollection.h  ObjectCollection.h  PointSource.h  PointSourceCollection.h  Predict.h  PredictPlan.h  PredictPlanExecCPU.h  SkyModel.h  Spectrum.h  Stokes.h  StokesVector.h  UvwUtils.h
predict/cpp/include/predict/common/: Datastructures.h  ExtensibleXtensor1D.h  MemoryContainer.h  SmartVector.h
predict/cpp/include/predict/test/: Common.h  MSUtils.h
predict/cpp/src/: Baseline.cpp  BeamResponse.cpp  GaussianSource.cpp  PointSource.cpp  PointSourceCollection.cpp  Predict.cpp  PredictPlan.cpp  PredictPlanExecCPU.cpp  SkyModel.cpp  Stokes.cpp  precision_test.py
predict/cpp/src/test/: Common.cpp
predict/cpp/tests/: test_directions.cpp  test_extensiblextensor1d.cpp  test_gaussiansourcecollection.cpp  test_pointsourcecollection.cpp  test_predictplan.cpp  test_predictplanexeccpu.cpp  test_simulator.cpp  test_skymodel.cpp  test_smartvector.cpp  test_spectrum.cpp  test_stokesvector.cpp  test_uvwutils.cpp
