[project]
name = "idg-python"
description = "Image-Domain Gridding (IDG) kernels implemented in Python"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.5",
    "numba>=0.61.2",
    "numpy>=1.26.4",
]

[project.urls]
homepage = "https://github.com/astron-rd/pace"

[project.scripts]
idg = "idg_python.main:main"

[build-system]
requires = [
    "setuptools>=70.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "dist",
    "docs",
    "*lib/python*",
    "*egg",
]

[tool.ruff.lint]
# Expand basic rules with name and style checks roughly equivalent to flake8 + black + pylint
# Some additional functional errors such as `await` on none async or wrong return types / args.
# More info https://docs.astral.sh/ruff/rules/
select = ["N", "A", "E", "F", "B", "W", "Q", "ASYNC", "S", "G", "RET", "ARG", "I"]
ignore = ["E203", "E741", "E501", "N806", "S101", "S311"]

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
env = [{"PYTHONWARNINGS"="default::DeprecationWarning"}]
addopts = "--cov-report term --cov-report xml --cov-report html --cov=idg_python"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "build>=0.8.0"
]
