[package]
name = "idg"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
code-timing-macros = "0.0.6"
ndarray = { version = "0.17.2", features = ["serde"] }
ndarray-npy = "0.10.0"
ndarray-rand = "0.16.0"
num-complex = "0.4.6"
num-traits = "0.2.19"
py_literal = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
