[package]
name = "idg"
version = "0.1.0"
rust-version = "1.85"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
byteorder = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
fftw = "0.8.0"
itertools = "0.14.0"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
ndarray-npy = "0.10.0"
ndarray-rand = "0.16.0"
num-complex = "0.4.6"
num-traits = "0.2.19"
py_literal = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[patch.crates-io]
ndarray = { git = "https://github.com/rust-ndarray/ndarray.git" }

[features]
f64 = []

[lints.clippy]
excessive_precision = "allow"
